<resources>
    <string name="UMContentTooLong">"Your content was over 140 characters. You'll have to be more clever."</string>
    <string name="UMDeleteFeedback">Delete Feedback</string>
    <string name="UMDeleteMsg">Delete message</string>
    <string name="UMDeleteThread">Delete Thread</string>
    <string name="UMEmptyFbNotAllowed">Please input your feedback.</string>
    <string name="UMFbList_ListItem_State_Fail">Fail</string>
    <string name="UMFbList_ListItem_State_ReSend">Fail,Press to resend</string>
    <string name="UMFbList_ListItem_State_Sending">Sending...</string>
    <string name="UMFb_Atom_State_Resend">Fail,press to resend</string>
    <string name="UMFb_Atom_State_Sending">Sending...</string>
    <string name="UMFeedbackContent">Input your suggestions here</string>
    <string name="UMFeedbackConversationTitle">My Feedback</string>
    <string name="UMFeedbackListTitle">My Feedback</string>
    <string name="UMFeedbackSummit">Submit</string>
    <string name="UMFeedbackTitle">Every word you write will benefit us.</string>
    <string name="UMFeedbackUmengTitle">Feedback</string>
    <string name="UMNewReplyAlertTitle">"You've got reply"</string>
    <string name="UMNewReplyFlick">Got new reply</string>
    <string name="UMNewReplyHint">Click to view</string>
    <string name="UMNewReplyTitle">Got new reply</string>
    <string name="UMResendFeedback">Resend Feedback</string>
    <string name="UMViewFeedback">View Feedback</string>
    <string name="UMViewThread">View Thread</string>
    <string name="about">About</string>
    <string name="add">Tap to Add</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="check">Check</string>
    <string name="clear">Clear</string>
    <string name="common_image_crop_cancel">"  Cancel  "</string>
    <string name="common_image_crop_done">"  Done  "</string>
    <string name="common_image_crop_save">"  Save  "</string>
    <string name="common_image_pick_photo">Gallery</string>
    <string name="common_image_pick_picture_failed">Pick Photo Fail</string>
    <string name="common_image_take_photo">Camera</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="friday">Friday</string>
    <string name="help">Help</string>
    <string name="loadapp_waiting">loading…</string>
    <string name="max_valure">"MAX : "</string>
    <string name="min_value">"MIN : "</string>
    <string name="monday">Monday</string>
    <string name="month">Month</string>
    <string name="no">No</string>
    <string name="pick_dialog_tips">The center point will show the picker you pick around the circle. And press the center point to make a sure.</string>
    <string name="pickcolor">Pick a Color</string>
    <string name="saturday">Saturday</string>
    <string name="save">Save</string>
    <string name="saving">Saving</string>
    <string name="settings">Settings</string>
    <string name="share">share</string>
    <string name="sunday">Sunday</string>
    <string name="sure">Sure</string>
    <string name="thursday">Thursday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wendesday">Wednesday</string>
    <string name="year">Year</string>
    <string name="yes">Yes</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_pause_notification_prefix">Pause:</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="AlibcWebviewTag">AlibcWebviewTag</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>
    <string name="about_us">关于牛杂网</string>
    <string name="account">个人中心</string>
    <string name="action_settings">Settings</string>
    <string name="alisdk_message_10008_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10008_message">生成订单地址出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10008_name">GET_ORDER_URL_EXCEPTION</string>
    <string name="alisdk_message_10008_type">E</string>
    <string name="alisdk_message_10009_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10009_message">查询订单出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10009_name">QUERY_ORDER_RESULT_EXCEPTION</string>
    <string name="alisdk_message_10009_type">E</string>
    <string name="alisdk_message_14_message">调用外部API传入参数为null，请加入参数再试</string>
    <string name="alisdk_message_17_action" />
    <string name="alisdk_message_17_message">不能获取类名为 {0}，过滤条件为 {1} 的服务</string>
    <string name="alisdk_message_17_name">SERVICE_NOT_AVAILABLE_ERROR</string>
    <string name="alisdk_message_17_type">E</string>
    <string name="alisdk_message_801_action">请调整参数后重试当前操作</string>
    <string name="alisdk_message_801_message">商品数量必须为整数并大于 0</string>
    <string name="alisdk_message_801_name">QUANTITY_FORMAT_ERROR</string>
    <string name="alisdk_message_801_type">E</string>
    <string name="alisdk_message_802_action">请修改传入的淘客 pid，如不确认，请联系淘客相关人员</string>
    <string name="alisdk_message_802_message">当前传入的淘客 pid {0} 非法，正确格式应以 mm_ 为前缀</string>
    <string name="alisdk_message_802_name">INVALID_TAOKE_PID_ERROR</string>
    <string name="alisdk_message_802_type">E</string>
    <string name="alisdk_message_803_action">请在初始化之前调用 TradeConfigs.defaultTaokePid=mm_**** 设置默认的淘客 pid 值, 此值会在相关方法调用时未指定 pid 时使用</string>
    <string name="alisdk_message_803_message">未设置默认的淘客 pid</string>
    <string name="alisdk_message_803_name">INVALID_DEFAULT_TAOKE_PID</string>
    <string name="alisdk_message_803_type">W</string>
    <string name="alisdk_message_804_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_804_message">使用支付宝支付失败，支付宝错误码为 8000, 含义为正在处理中</string>
    <string name="alisdk_message_804_name">PAY_IN_PROGRESS</string>
    <string name="alisdk_message_804_type">E</string>
    <string name="alisdk_message_805_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_805_message">使用支付宝支付失败，支付宝错误码为 4000, 含义为订单支付失败</string>
    <string name="alisdk_message_805_name">PAY_ORDER_FAILED</string>
    <string name="alisdk_message_805_type">E</string>
    <string name="alisdk_message_806_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_806_message">使用支付宝支付失败，支付宝错误码为 6001, 含义为用户中途取消</string>
    <string name="alisdk_message_806_name">PAY_USER_CANCEL</string>
    <string name="alisdk_message_806_type">E</string>
    <string name="alisdk_message_807_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_807_message">使用支付宝支付失败，支付宝错误码为 6002, 含义为网络连接出错</string>
    <string name="alisdk_message_807_name">PAY_NETWORK_FAILED</string>
    <string name="alisdk_message_807_type">E</string>
    <string name="alisdk_message_808_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_808_message">使用支付宝支付失败，支付宝错误码为 {0}</string>
    <string name="alisdk_message_808_name">PAY_COMMON_ERROR</string>
    <string name="alisdk_message_808_type">E</string>
    <string name="alisdk_message_809_message">使用Apliay SDK调用方法失败，请下载最新的ApliaySDK lib包或者使用H5方式付款</string>
    <string name="aliusersdk_network_error">亲，您的手机网络不太顺畅喔~</string>
    <string name="aliusersdk_session_error">亲，你的操作已超时，请重试</string>
    <string name="app_name">牛杂网</string>
    <string name="auth_sdk_message_10003_action" />
    <string name="auth_sdk_message_10003_message">用户取消登录或登录失败</string>
    <string name="auth_sdk_message_10003_name">USER_CANCEL</string>
    <string name="auth_sdk_message_10003_type">I</string>
    <string name="auth_sdk_message_10004_action" />
    <string name="auth_sdk_message_10004_message">用户取消登录</string>
    <string name="auth_sdk_message_10004_name">TAOBAO_CANCEL</string>
    <string name="auth_sdk_message_10004_type">I</string>
    <string name="auth_sdk_message_10005_action" />
    <string name="auth_sdk_message_10005_message">唤起手淘登录失败</string>
    <string name="auth_sdk_message_10005_name">TAOBAO_ERROR</string>
    <string name="auth_sdk_message_10005_type">I</string>
    <string name="auth_sdk_message_10010_action" />
    <string name="auth_sdk_message_10010_message">系统异常</string>
    <string name="auth_sdk_message_10010_name">SYSTEM_ERROR</string>
    <string name="auth_sdk_message_10010_type">I</string>
    <string name="auth_sdk_message_10015_action" />
    <string name="auth_sdk_message_10015_message">退出登录</string>
    <string name="auth_sdk_message_10015_name">USER_LOGOUT</string>
    <string name="auth_sdk_message_10015_type">I</string>
    <string name="auth_sdk_message_10101_action" />
    <string name="auth_sdk_message_10101_message">H5登录失败</string>
    <string name="auth_sdk_message_10101_name">H5_ERROR</string>
    <string name="auth_sdk_message_10101_type">I</string>
    <string name="auth_sdk_message_15_action">请使用默认的 androiddebugkey 对当前开发应用签名或在应用初始化之前调用 MemberSDK.turnOnDebug(), 运行程序查看 logcat 输出以获取更多错误细节，并采取对应操作</string>
    <string name="auth_sdk_message_15_message">接口异常，错误消息为： {0}, 请使用 LogCat 查看更多细节</string>
    <string name="auth_sdk_message_15_name">SERVER_REQUEST_ERROR</string>
    <string name="auth_sdk_message_15_type">I</string>
    <string name="com_taobao_nb_sdk_loading_progress_message">加载中</string>
    <string name="com_taobao_tae_sdk_alert_message">您离开太久了，请重新操作</string>
    <string name="com_taobao_tae_sdk_authorize_title">登录授权</string>
    <string name="com_taobao_tae_sdk_back_message">返回</string>
    <string name="com_taobao_tae_sdk_bind_title">登录并绑定</string>
    <string name="com_taobao_tae_sdk_close_message">返回</string>
    <string name="com_taobao_tae_sdk_confirm">确定</string>
    <string name="com_taobao_tae_sdk_confirm_cancel">取消</string>
    <string name="ok">确定</string>
    <string name="tips">提示</string>
    <string name="vod_definition_high">高清</string>
    <string name="vod_definition_normal">标清</string>
    <string name="vod_definition_ultra">超清</string>
    <string name="vod_select_episode">选集</string>
    <string name="vod_time_format_default">00:00:00</string>
</resources>