<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/dlg_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginRight="13.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@+id/dlg_title_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="95.0dip">
        <TextView android:id="@+id/dlg_title" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tips" style="@style/dlg_title_txt" />
        <RelativeLayout android:paddingLeft="17.0dip" android:paddingTop="14.0dip" android:paddingRight="17.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="60.0dip">
            <ImageView android:id="@+id/dlg_left_icon" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/dlg_icon_fail" android:layout_centerVertical="true" />
            <TextView android:id="@+id/dlg_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="content" android:layout_toRightOf="@+id/dlg_left_icon" android:layout_centerVertical="true" style="@style/dlg_content_txt" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/dlg_2btn_layout" android:paddingLeft="17.0dip" android:paddingTop="10.0dip" android:paddingRight="17.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0" android:layout_below="@+id/dlg_title_layout">
        <TextView android:gravity="center" android:id="@+id/dlg_left_btn" android:layout_width="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" style="@style/dlg_left_button_txt" />
        <ImageView android:layout_width="18.0dip" android:layout_height="wrap_content" android:src="@android:color/transparent" />
        <TextView android:gravity="center" android:id="@+id/dlg_right_btn" android:layout_width="fill_parent" android:text="@string/ok" android:layout_weight="1.0" style="@style/dlg_right_button_txt" />
    </LinearLayout>
</RelativeLayout>
