<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@+id/main" android:background="@drawable/xl_dlg_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="300.0dip">
        <TextView android:textSize="15.0sp" android:textColor="@color/title_name" android:gravity="center" android:id="@+id/dlgTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/remind_me_before_minute" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <TextView android:textSize="15.0sp" android:textColor="@color/title_name" android:gravity="left" android:id="@+id/txt_numberMIN" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
            <TextView android:textSize="15.0sp" android:textColor="@color/title_name" android:gravity="left" android:id="@+id/txt_numberMAX" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="0" />
        </LinearLayout>
        <TextView android:textSize="40.0sp" android:textColor="@color/title_name" android:gravity="center" android:id="@+id/txt_inputNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="#fffff5ee" android:id="@+id/btn_1" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="1" />
            <Button android:textColor="#fffff5ee" android:id="@+id/btn_2" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="2" />
            <Button android:textColor="#fffff5ee" android:id="@+id/btn_3" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="3" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="#fffff5ee" android:id="@+id/btn_4" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="4" />
            <Button android:textColor="#fffff5ee" android:id="@+id/btn_5" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="5" />
            <Button android:textColor="#fffff5ee" android:id="@+id/btn_6" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="6" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="#fffff5ee" android:id="@+id/btn_7" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="7" />
            <Button android:textColor="#fffff5ee" android:id="@+id/btn_8" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="8" />
            <Button android:textColor="#fffff5ee" android:id="@+id/btn_9" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="9" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="#ffff0000" android:id="@+id/btn_clear" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/clear" />
            <Button android:textColor="#fffff5ee" android:id="@+id/btn_0" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="0" />
            <Button android:textColor="#ff0000ff" android:id="@+id/btn_back" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/delete" />
        </LinearLayout>
        <RelativeLayout android:layout_gravity="center_horizontal" android:id="@+id/dlg_2btn_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip">
            <Button android:textSize="15.0sp" android:textColor="#ff4f4f4f" android:gravity="center" android:id="@+id/cancel" android:background="@drawable/xl_dlg_left_btn_selector" android:layout_width="118.0dip" android:layout_height="43.0dip" android:layout_marginLeft="19.0dip" android:text="@string/cancel" android:layout_toRightOf="@+id/ok" />
            <Button android:textSize="15.0sp" android:textColor="#ff4f4f4f" android:gravity="center" android:id="@+id/ok" android:background="@drawable/xl_dlg_right_btn_selector" android:layout_width="118.0dip" android:layout_height="43.0dip" android:text="@string/sure" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
