<?xml version="1.0" encoding="utf-8"?>
<com.xunlei.library.vod.VodPlayerView android:orientation="vertical" android:id="@+id/vod_player_layout" android:background="@android:color/background_dark" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:id="@+id/vod_player_surfaceparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true" />
    <RelativeLayout android:id="@+id/vod_player_top_bar" android:background="@drawable/vod_player_top_bar_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="43.0dip" android:layout_alignParentTop="true">
        <TextView android:textSize="15.0sp" android:textColor="@color/vod_player_text_white" android:gravity="center_vertical" android:id="@+id/vod_player_system_time" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="13.0dip" android:layout_alignParentRight="true" />
        <ProgressBar android:id="@+id/vod_player_pb_power" android:background="@drawable/vod_player_progress_power_empty" android:layout_width="23.0dip" android:layout_height="12.0dip" android:layout_marginRight="9.0dip" android:max="100" android:progress="100" android:progressDrawable="@drawable/vod_player_progress_power_style" android:layout_toLeftOf="@+id/vod_player_system_time" android:layout_centerVertical="true" style="@android:style/Widget.ProgressBar.Horizontal" />
        <RelativeLayout android:id="@+id/vod_player_btn_choose_episode_parent" android:layout_width="66.0dip" android:layout_height="fill_parent" android:layout_toLeftOf="@+id/vod_player_pb_power" android:layout_centerVertical="true">
            <ToggleButton android:textSize="13.0sp" android:textColor="@drawable/vod_player_text_btn_select_episode_selector" android:gravity="center_horizontal" android:id="@+id/vod_player_btn_choose_episode" android:background="@drawable/vod_player_btn_select_episode_selector" android:layout_width="45.0dip" android:layout_height="24.0dip" android:textOn="@string/vod_select_episode" android:textOff="@string/vod_select_episode" android:layout_centerInParent="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <ImageButton android:id="@+id/vod_player_btn_back" android:background="@android:color/transparent" android:paddingLeft="3.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/vod_player_btn_back_selector" android:scaleType="center" android:layout_centerVertical="true" android:contentDescription="@null" />
        <TextView android:textSize="14.5sp" android:textColor="@color/vod_player_text_white" android:ellipsize="middle" android:gravity="center|left" android:id="@+id/vod_player_tv_title" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:singleLine="true" android:layout_toLeftOf="@+id/vod_player_btn_choose_episode_parent" android:layout_toRightOf="@+id/vod_player_btn_back" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/vod_player_bottom_bar" android:background="@drawable/vod_player_bottom_bar_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <RelativeLayout android:orientation="horizontal" android:id="@+id/vod_layout_info" android:background="@android:color/transparent" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="@color/vod_player_text_white" android:id="@+id/vod_player_tv_time_elapsed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vod_time_format_default" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textSize="12.0sp" android:textColor="@color/vod_player_text_time_color" android:id="@+id/vod_player_tv_time_total" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vod_time_format_default" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <SeekBar android:id="@+id/vod_player_video_seekbar" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:maxHeight="2.0dip" android:progressDrawable="@drawable/vod_player_seekbar_style" android:minHeight="2.0dip" android:thumb="@drawable/vod_player_seekbar_thumb_selector" android:thumbOffset="10.0dip" android:layout_toLeftOf="@+id/vod_player_tv_time_total" android:layout_toRightOf="@+id/vod_player_tv_time_elapsed" />
        </RelativeLayout>
        <LinearLayout android:gravity="center_vertical" android:id="@+id/vod_player_btns_center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/vod_layout_info" android:layout_centerInParent="true">
            <ImageButton android:id="@+id/vod_player_btn_rewind" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/vod_player_btn_rewind_selector" android:scaleType="fitCenter" android:contentDescription="@null" />
            <ImageButton android:id="@+id/vod_player_btn_main" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:src="@drawable/vod_player_btn_pause_selector" android:scaleType="fitCenter" android:contentDescription="@null" />
            <ImageButton android:id="@+id/vod_player_btn_forward" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/vod_player_btn_forward_selector" android:scaleType="fitCenter" android:contentDescription="@null" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/vod_player_btns_center" android:layout_alignTop="@+id/vod_player_btns_center" android:layout_alignBottom="@+id/vod_player_btns_center" android:layout_alignParentLeft="true">
            <Button android:enabled="true" android:textSize="13.0sp" android:textColor="@drawable/vod_player_text_btn_definition_selector" android:gravity="center_horizontal" android:id="@+id/vod_player_btn_definition_choice" android:background="@drawable/vod_player_btn_definition_selector" android:layout_width="45.0dip" android:layout_height="24.0dip" android:layout_marginLeft="12.5dip" android:text="@string/vod_definition_normal" />
            <TextView android:textSize="12.0sp" android:id="@+id/vod_player_tv_speed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
        </LinearLayout>
        <ImageButton android:id="@+id/vod_player_btn_size" android:background="@android:color/transparent" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="19.5dip" android:src="@drawable/vod_player_btn_size_full_selector" android:scaleType="fitCenter" android:layout_alignTop="@+id/vod_player_btns_center" android:layout_alignBottom="@+id/vod_player_btns_center" android:layout_alignParentRight="true" android:contentDescription="@null" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/vod_player_right_bar" android:background="@drawable/vod_player_right_bar_bg" android:visibility="gone" android:layout_width="45.5dip" android:layout_height="fill_parent" android:layout_marginTop="@dimen/vod_player_right_bar_top_bottom_margin" android:layout_marginBottom="@dimen/vod_player_right_bar_top_bottom_margin" android:layout_above="@+id/vod_player_bottom_bar" android:layout_below="@+id/vod_player_top_bar" android:layout_alignParentRight="true">
        <ImageView android:id="@+id/vod_player_volume_indicator" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="11.0dip" android:src="@drawable/vod_player_btn_vol_selector" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:contentDescription="@null" />
        <com.xunlei.library.vod.VerticalSeekBar android:id="@+id/vod_player_volume_seekbar" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="1.0dip" android:maxHeight="2.0dip" android:progressDrawable="@drawable/vod_player_seekbar_style" android:minHeight="2.0dip" android:thumb="@drawable/vod_player_seekbar_vol_thumb_selector" android:thumbOffset="8.0dip" android:layout_above="@+id/vod_player_volume_indicator" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/vod_player_episode_list_layout" android:background="@drawable/vod_player_episode_list_normal" android:visibility="gone" android:layout_width="350.0dip" android:layout_height="fill_parent" android:layout_below="@+id/vod_player_top_bar" android:layout_alignParentRight="true">
        <ListView android:scrollbarThumbVertical="@drawable/vod_player_episodelist_scroll_thumb" android:id="@+id/vod_player_episode_list" android:scrollbars="vertical" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@drawable/vod_player_episode_list_selector" android:cacheColorHint="#00000000" android:divider="#ff303030" android:dividerHeight="0.5dip" android:choiceMode="singleChoice" />
    </RelativeLayout>
    <include android:id="@+id/vod_player_definition_list" android:visibility="gone" android:layout_width="68.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="10.0dip" android:layout_above="@+id/vod_player_bottom_bar" android:layout_alignParentLeft="true" layout="@layout/vod_popup_definition_choice_window_layout" />
    <ImageButton android:id="@+id/vod_player_btn_lock" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/vod_player_btn_lock_open" android:scaleType="fitCenter" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@null" />
    <include android:id="@+id/vod_player_loading_circle" android:visibility="gone" android:layout_width="@dimen/vod_player_loading_circle_width" android:layout_height="@dimen/vod_player_loading_circle_width" android:layout_centerInParent="true" layout="@layout/vod_notify_loading_circle" />
    <include android:id="@+id/vod_center_progress_view" android:visibility="gone" android:layout_width="150.0dip" android:layout_height="97.0dip" android:layout_centerInParent="true" layout="@layout/vod_center_progress_view" />
    <include android:id="@+id/vod_center_progress_with_text_view" android:visibility="gone" android:layout_width="150.0dip" android:layout_height="113.0dip" android:layout_centerInParent="true" layout="@layout/vod_center_progress_with_text_view" />
    <include android:id="@+id/vod_player_first_loading_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" layout="@layout/vod_player_first_loading_view" />
</com.xunlei.library.vod.VodPlayerView>
